refactor: new ui (#1500)
本次对项目的 UI 进行一轮焕新，具体变更如下：

- 重构了首页 UI，底栏现在可以自由选择样式
- 首页应用列表现在可随时控制显示或隐藏，但暂时取消了跟随作用域隐藏的功能
- 搜索界面焕新，现在搜索结果按应用进行分组，并且也新增了历史记录功能
- 新增 OOBE 引导页，用于取代之前的弹窗用户协议功能
- 合并 SharedPreferences 和 RemotePreferences 的索引
- 整理项目代码及翻译文件
- 修复了搜索动画卡顿的问题
- 修复了关于页面顶部抽搐的问题

Co-authored-by: Fan <732388462@qq.com>
Co-authored-by: 铃柒柒 <lingqiqi233@gmail.com>